--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+faiss-gpu
 Flask==2.2.3
 Flask_Cors==3.0.10
 gradio==3.18.0
@@ -8,9 +9,9 @@ requests==2.27.1
 scipy==1.10.1
 sounddevice==0.4.6
 SoundFile==0.12.1
-starlette==0.26.1
-torch==2.0.0+cu118
-torchaudio==2.0.1+cu118
+starlette
+torch==2.0.0
+torchaudio==2.0.1
 tqdm==4.65.0
 scikit-maad==1.3.12
 praat-parselmouth==0.4.3
